--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -5,7 +5,7 @@ eleventyExcludeFromCollections: true
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     {% for page in collections.all %}
-    {%- if page.url and page.data.locale == "en-CA" -%}
+    {%- if page.url -%}
     <url>
         <loc>{{ env.baseUrl if env.baseUrl else 'http://localhost:3000' }}{{ page.url | url }}</loc>
         <lastmod>{{ page.date.toISOString() }}</lastmod>
