feat: use lite-youtube-embed to improve YouTube video performance

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,7 +9,9 @@
     {% endif %}
     {% include 'globals/meta.njk' %}
     <link rel="stylesheet" href="/assets/styles/main.css"/>
+    <link rel="stylesheet" href="/assets/styles/lite-yt-embed.css"/>
     <script src="/assets/scripts/main.js" defer></script>
+    <script src="/assets/scripts/lite-yt-embed.js"></script>
     <link rel="preload" href="/lib/infusion/dist/infusion-uio.js" as="script">
 
     <!-- CSS files for UI Options-->
