--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -152,6 +152,10 @@ p img {
 
 .embed--youtube {
 	min-inline-size: 100%;
+
+	lite-youtube {
+		max-inline-size: 100%;
+	}
 }
 
 // Special styling rules for homepage content
