--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -126,7 +126,8 @@ button:not(
 .fl-prefsEditor-showHide,
 .fl-prefsEditor-reset,
 .fl-switchUI-control,
-.lty-playbtn)::before {
+.lty-playbtn,
+.expander__toggle)::before {
 	block-size: rem(54);
 	border-radius: rem(26);
 	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
