--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/assets/styles/lite-yt-embed.css"/>
     <script src="/assets/scripts/main.js" defer></script>
     <script src="/assets/scripts/lite-yt-embed.js"></script>
+    <script src="/assets/scripts/expandable-heading.js"></script>
     <link rel="preload" href="/lib/infusion/dist/infusion-uio.js" as="script">
 
     <!-- CSS files for UI Options-->
