--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -17,17 +17,22 @@
     </div>
   </article>
   <div class="homepage-cards">
-    <a href="/initiatives/" class="blue card">
-      <h2>Read current views in inclusive data science</h2>
+    <a href="/resources/" class="blue card">
+      <h2>Resource Library</h2>
+      <p>Search IDRC's library of AI and data analytics resources</p>
     </a>
-    <a href="/events/" class="yellow card">
-      <h2>Participate in our inclusion challenge initiatives</h2>
+    <a href="/events/" class="green card">
+      <h2>Events</h2>
+      <p>Find out about IDRC events and how you can participate</p>
     </a>
-    <a href="/badges/" class="azure card">
-      <h2>Earn We Count Badges</h2>
+    <a href="/initiatives/" class="azure card">
+      <h2>Inclusive AI Initiatives</h2>
+      <p>Explore IDRC project activities</p>
     </a>
-    <a href="/resources/" class="green card">
-      <h2>Search the We Count Library</h2>
+    <a href="/rtdd/" class="yellow card">
+      <h2>Regulating the Digital</h2>
+      <h2 class="card-title__french">Réguler le numérique</h2>
+      <p>Addressing digital exclusion / Lutter contre l’exclusion numérique</p>
     </a>
   </div>
 </div>
