--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -17,23 +17,38 @@
     </div>
   </article>
   <div class="homepage-cards">
-    <a href="/resources/" class="blue card">
-      <h2>Resource Library</h2>
+    <div class="card blue">
+      <h2>
+        <a href="/resources/">
+          Resource Library
+        </a>
+      </h2>
       <p>Search IDRC's library of AI and data analytics resources</p>
-    </a>
-    <a href="/events/" class="green card">
-      <h2>Events</h2>
+    </div>
+    <div class="card green">
+      <h2>
+        <a href="/events/">
+          Events
+        </a>
+      </h2>
       <p>Find out about IDRC events and how you can participate</p>
-    </a>
-    <a href="/initiatives/" class="azure card">
-      <h2>Inclusive AI Initiatives</h2>
+    </div>
+     <div class="card azure">
+      <h2>
+        <a href="/initiatives/">
+          Events
+        </a>
+      </h2>
       <p>Explore IDRC project activities</p>
-    </a>
-    <a href="/rtdd/" class="yellow card">
-      <h2>Regulating the Digital</h2>
-      <h2 class="card-title__french">Réguler le numérique</h2>
-      <p>Addressing digital exclusion / Lutter contre l’exclusion numérique</p>
-    </a>
+    </div>
+    <div class="card yellow">
+      <h2>
+        <a href="/rtdd/">
+          Regulating the Digital / <span lang="fr">Réguler le numérique</span>
+        </a>
+      </h2>
+      <p>Addressing digital exclusion / <span lang="fr">Lutter contre l’exclusion numérique</span></p>
+    </div>
   </div>
 </div>
 
