feat: add Monserrat and MonserratAlternates fonts and use them for cards

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -5,6 +5,11 @@
 // Typography.
 * {
 	font-family: $family-sans-serif;
+
+	&.card > h2 > a,
+	&.card > p {
+		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
+	}
 }
 
 input,
