--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -69,3 +69,131 @@
 		url("../fonts/roboto-v20-latin-regular.woff2") format("woff2"),
 		url("../fonts/roboto-v20-latin-regular.woff") format("woff");
 }
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: 400;
+	src: url("../fonts/Montserrat-Regular.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: italic;
+	font-weight: 400;
+	src: url("../fonts/Montserrat-Italic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: 500;
+	src: url("../fonts/Montserrat-Medium.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: italic;
+	font-weight: 500;
+	src: url("../fonts/Montserrat-MediumItalic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: 600;
+	src: url("../fonts/Montserrat-SemiBold.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: italic;
+	font-weight: 600;
+	src: url("../fonts/Montserrat-SemiBoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: normal;
+	font-weight: 700;
+	src: url("../fonts/Montserrat-Bold.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: Montserrat;
+	font-style: italic;
+	font-weight: 700;
+	src: url("../fonts/Montserrat-BoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: normal;
+	font-weight: 400;
+	src: url("../fonts/MontserratAlternates-Regular.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: italic;
+	font-weight: 400;
+	src: url("../fonts/MontserratAlternates-Italic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: normal;
+	font-weight: 500;
+	src: url("../fonts/MontserratAlternates-Medium.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: italic;
+	font-weight: 500;
+	src: url("../fonts/MontserratAlternates-MediumItalic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: normal;
+	font-weight: 600;
+	src: url("../fonts/MontserratAlternates-SemiBold.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: italic;
+	font-weight: 600;
+	src: url("../fonts/MontserratAlternates-SemiBoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: normal;
+	font-weight: 700;
+	src: url("../fonts/MontserratAlternates-Bold.ttf") format("ttf");
+}
+
+@font-face {
+	font-display: swap;
+	font-family: "Montserrat Alternates";
+	font-style: italic;
+	font-weight: 700;
+	src: url("../fonts/MontserratAlternates-BoldItalic.ttf") format("ttf");
+}
