--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -75,7 +75,7 @@
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: 400;
-	src: url("../fonts/Montserrat-Regular.ttf") format("ttf");
+	src: url("../fonts/Montserrat-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -83,7 +83,7 @@
 	font-family: Montserrat;
 	font-style: italic;
 	font-weight: 400;
-	src: url("../fonts/Montserrat-Italic.ttf") format("ttf");
+	src: url("../fonts/Montserrat-Italic.woff2") format("woff2");
 }
 
 @font-face {
@@ -91,7 +91,7 @@
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: 500;
-	src: url("../fonts/Montserrat-Medium.ttf") format("ttf");
+	src: url("../fonts/Montserrat-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -99,7 +99,7 @@
 	font-family: Montserrat;
 	font-style: italic;
 	font-weight: 500;
-	src: url("../fonts/Montserrat-MediumItalic.ttf") format("ttf");
+	src: url("../fonts/Montserrat-MediumItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -107,7 +107,7 @@
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: 600;
-	src: url("../fonts/Montserrat-SemiBold.ttf") format("ttf");
+	src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -115,7 +115,7 @@
 	font-family: Montserrat;
 	font-style: italic;
 	font-weight: 600;
-	src: url("../fonts/Montserrat-SemiBoldItalic.ttf") format("ttf");
+	src: url("../fonts/Montserrat-SemiBoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -123,7 +123,7 @@
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: 700;
-	src: url("../fonts/Montserrat-Bold.ttf") format("ttf");
+	src: url("../fonts/Montserrat-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -131,7 +131,7 @@
 	font-family: Montserrat;
 	font-style: italic;
 	font-weight: 700;
-	src: url("../fonts/Montserrat-BoldItalic.ttf") format("ttf");
+	src: url("../fonts/Montserrat-BoldItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -139,7 +139,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: normal;
 	font-weight: 400;
-	src: url("../fonts/MontserratAlternates-Regular.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-Regular.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -147,7 +148,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: italic;
 	font-weight: 400;
-	src: url("../fonts/MontserratAlternates-Italic.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-Italic.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -155,7 +157,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: normal;
 	font-weight: 500;
-	src: url("../fonts/MontserratAlternates-Medium.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-Medium.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -163,7 +166,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: italic;
 	font-weight: 500;
-	src: url("../fonts/MontserratAlternates-MediumItalic.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-MediumItalic.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -171,7 +175,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: normal;
 	font-weight: 600;
-	src: url("../fonts/MontserratAlternates-SemiBold.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-SemiBold.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -179,7 +184,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: italic;
 	font-weight: 600;
-	src: url("../fonts/MontserratAlternates-SemiBoldItalic.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-SemiBoldItalic.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -187,7 +193,8 @@
 	font-family: "Montserrat Alternates";
 	font-style: normal;
 	font-weight: 700;
-	src: url("../fonts/MontserratAlternates-Bold.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-Bold.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
 
 @font-face {
@@ -195,5 +202,6 @@
 	font-family: "Montserrat Alternates";
 	font-style: italic;
 	font-weight: 700;
-	src: url("../fonts/MontserratAlternates-BoldItalic.ttf") format("ttf");
+	src: url("../fonts/MontserratAlternates-BoldItalic.woff2") format("woff2");
+	unicode-range: U+0049, U+006C;
 }
