fix: apply font-family on body instead of *

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -3,13 +3,8 @@
 @import "fonts";
 
 // Typography.
-* {
+body {
 	font-family: $family-sans-serif;
-
-	&.card > h2 > a,
-	&.card > p {
-		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
-	}
 }
 
 input,
