--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -12,6 +12,7 @@
 		block-size: rem(438);
 		border-radius: rem(10);
 		box-shadow: 0 rem(4) rem(4) rgba(0 0 0 / 25%);
+		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
 		position: relative;
 		text-align: center;
 
