fix: specify lang attribute with locale

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -44,10 +44,10 @@
     <div class="card yellow">
       <h2>
         <a href="/rtdd/">
-          Regulating the Digital / <span lang="fr">Réguler le numérique</span>
+          Regulating the Digital / <span lang="fr-CA">Réguler le numérique</span>
         </a>
       </h2>
-      <p>Addressing digital exclusion / <span lang="fr">Lutter contre l’exclusion numérique</span></p>
+      <p>Addressing digital exclusion / <span lang="fr-CA">Lutter contre l’exclusion numérique</span></p>
     </div>
   </div>
 </div>
