fix: render images for cards as svg

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -24,6 +24,7 @@
         </a>
       </h2>
       <p>Search IDRC's library of AI and data analytics resources</p>
+      {% include "../../assets/images/blue.svg" %}
     </div>
     <div class="card green">
       <h2>
@@ -32,6 +33,7 @@
         </a>
       </h2>
       <p>Find out about IDRC events and how you can participate</p>
+      {% include "../../assets/images/green.svg" %}
     </div>
      <div class="card azure">
       <h2>
@@ -40,6 +42,7 @@
         </a>
       </h2>
       <p>Explore IDRC project activities</p>
+      {% include "../../assets/images/azure.svg" %}
     </div>
     <div class="card yellow">
       <h2>
@@ -48,6 +51,7 @@
         </a>
       </h2>
       <p>Addressing digital exclusion / <span lang="fr-CA">Lutter contre l’exclusion numérique</span></p>
+      {% include "../../assets/images/yellow.svg" %}
     </div>
   </div>
 </div>
