--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -13,6 +13,7 @@
 		border-radius: rem(10);
 		box-shadow: 0 rem(4) rem(4) rgba(0 0 0 / 25%);
 		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
+		overflow: hidden;
 		position: relative;
 		text-align: center;
 
@@ -56,26 +57,29 @@
 		p {
 			font-weight: 400;
 		}
+
+		svg {
+			bottom: -20;
+			inline-size: 100%;
+			left: 0;
+			position: absolute;
+		}
 	}
 
 	.blue {
 		background-color: $blue-grey;
-		background-image: url("../images/blue.svg");
 	}
 
 	.green {
 		background-color: $green-grey;
-		background-image: url("../images/green.svg");
 	}
 
 	.yellow {
 		background-color: $yellow;
-		background-image: url("../images/yellow.svg");
 	}
 
 	.azure {
 		background-color: $azure;
-		background-image: url("../images/azure.svg");
 	}
 }
 
