fix: title of the 3rd card

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -38,7 +38,7 @@
      <div class="card azure">
       <h2>
         <a href="/initiatives/">
-          Events
+          Inclusive AI Initiatives
         </a>
       </h2>
       <p>Explore IDRC project activities</p>
