--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -41,7 +41,7 @@
 
 		h2 {
 			font-weight: 600;
-			line-height: 130%;
+			line-height: 1.3;
 
 			a {
 				color: hsl(0deg 0% 0% / 100%);
@@ -56,15 +56,14 @@
 
 		p {
 			font-weight: 400;
-			line-height: 130%;
+			line-height: 1.3;
 		}
 
 		.card__content {
 			block-size: 100%;
 			inline-size: 100%;
-			left: 0;
+			inset: 0;
 			position: absolute;
-			top: 0;
 		}
 
 		svg {
