fix: update based on PR feedback

--- a/src/assets/styles/abstracts/_breakpoints.scss
+++ b/src/assets/styles/abstracts/_breakpoints.scss
@@ -2,7 +2,7 @@
 	$min: breakpoint-value($name, $breakpoints);
 
 	@if $min {
-		@media (width > rem($min)) {
+		@media (width >= rem($min)) {
 			@content;
 		}
 	}
