--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="/assets/styles/lite-yt-embed.css"/>
     <script src="/assets/scripts/main.js" defer></script>
     <script src="/assets/scripts/lite-yt-embed.js"></script>
-    <script src="/assets/scripts/expandable-heading.js"></script>
     <link rel="preload" href="/lib/infusion/dist/infusion-uio.js" as="script">
+
+    {%  if expandableHeading %}
+    <script src="/assets/scripts/expandable-heading.js"></script>
+    {% endif %}
 
     <!-- CSS files for UI Options-->
     <link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/core/css/fluid.css"/>
