--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -105,7 +105,8 @@ button:not(
 .fl-prefsEditor-showHide,
 .fl-prefsEditor-reset,
 .fl-switchUI-control,
-.lty-playbtn) {
+.lty-playbtn,
+.expandable-heading__toggle) {
 	background-color: $green-light;
 	block-size: rem(54);
 	border: 0;
@@ -127,7 +128,8 @@ button:not(
 .fl-prefsEditor-reset,
 .fl-switchUI-control,
 .lty-playbtn,
-.expander__toggle)::before {
+.expander__toggle,
+.expandable-heading__toggle)::before {
 	block-size: rem(54);
 	border-radius: rem(26);
 	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
