--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -17,38 +17,11 @@
     </div>
   </article>
   <div class="homepage-cards">
-    <div class="card blue">
-      <h2>
-        <a href="/resources/">
-          Resource Library
-        </a>
-      </h2>
-      <p>Search IDRC's library of AI and data analytics resources</p>
-    </div>
-    <div class="card green">
-      <h2>
-        <a href="/events/">
-          Events
-        </a>
-      </h2>
-      <p>Find out about IDRC events and how you can participate</p>
-    </div>
-     <div class="card azure">
-      <h2>
-        <a href="/initiatives/">
-          Events
-        </a>
-      </h2>
-      <p>Explore IDRC project activities</p>
-    </div>
-    <div class="card yellow">
-      <h2>
-        <a href="/rtdd/">
-          Regulating the Digital / <span lang="fr-CA">Réguler le numérique</span>
-        </a>
-      </h2>
-      <p>Addressing digital exclusion / <span lang="fr-CA">Lutter contre l’exclusion numérique</span></p>
-    </div>
+    {%- from '../components/card.macro.njk' import card %}
+    {{ card({color: "blue", url: "/resources/", title: "Resource Library", text: "Search IDRC's library of AI and data analytics resources", backgroundSvg: "../svg/blue.svg"}) }}
+    {{ card({color: "green", url: "/events/", title: "Events", text: "Find out about IDRC events and how you can participate", backgroundSvg: "../svg/green.svg"}) }}
+    {{ card({color: "azure", url: "/initiatives/", title: "Inclusive AI Initiatives", text: "Explore IDRC project activities", backgroundSvg: "../svg/azure.svg"}) }}
+    {{ card({color: "yellow", url: "/rtdd/", title: "Regulating the Digital<div lang='fr-CA'>Réguler le numérique</div>", text: "Addressing digital exclusion / <span lang='fr-CA'>Lutter contre l’exclusion numérique</span>", backgroundSvg: "../svg/yellow.svg"}) }}
   </div>
 </div>
 
