--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -10,7 +10,7 @@
 		aspect-ratio: 271 / 476;
 		background-color: $white;
 		background-repeat: no-repeat;
-		border: rem(1) solid;
+		border: rem(1) solid transparent;
 		border-radius: rem(10);
 		box-shadow: 0 rem(4) rem(4) rgba(0 0 0 / 25%);
 		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
