feat: replace the Youtube video with an image on the home page

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,6 +8,7 @@
     {% include 'globals/service-worker.njk' %}
     {% endif %}
     {% include 'globals/meta.njk' %}
+    {% include "svg/filters.svg" %}
     <link rel="stylesheet" href="/assets/styles/main.css"/>
     <link rel="stylesheet" href="/assets/styles/lite-yt-embed.css"/>
     <script src="/assets/scripts/main.js" defer></script>
