--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -9,6 +9,7 @@
 
 {% block content %}
 {% if page.url === "/" %}
+<script src="/assets/scripts/home-page-image.js"></script>
 <div>
   <article>
     <h1 class="title">{{ pageTitle }}</h1>
