--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -165,6 +165,11 @@
 			fill: var(--fl-bgColor, $white);
 			stroke: var(--fl-fgColor, transparent);
 		}
+
+		.cls-5 {
+			fill: var(--fl-bgColor, #ffbf59);
+			stroke: var(--fl-fgColor, transparent);
+		}
 	}
 
 	.azure {
