fix: update based on Figma design

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -116,7 +116,7 @@ header {
 					margin-block: rem(16);
 					margin-inline: rem(16);
 					text-align: start;
-					text-transform: uppercase;
+					text-transform: capitalize;
 					white-space: nowrap;
 				}
 			}
