--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -176,6 +176,7 @@ article .homepage-content {
 	.banner-image-text {
 		background-color: transparent !important;
 		color: $white;
+		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
 		font-size: rem(40);
 		font-weight: 600;
 		position: absolute;
