feat: update homepage based on Figma design

--- a/src/_includes/components/idrc-indicator.njk
+++ b/src/_includes/components/idrc-indicator.njk
@@ -1,7 +1,7 @@
 <div class="idrc-indicator-wrapper">
     <div class="idrc-indicator">
         <div class="idrc-indicator-element">
-            <span>An <a href="https://idrc.ocadu.ca/">Inclusive Design Research Centre</a> project</span>
+            <span><em>We Count: Artificial Intelligence<br>Inclusion Projects from</em> <b>Inclusive<br>Design Research Centre</b></span>
         </div>
     </div>
 </div>
