--- a/src/_includes/components/search-container.njk
+++ b/src/_includes/components/search-container.njk
@@ -1,4 +1,4 @@
 <div class="search-container">
-  <svg><use xlink:href="#search" /></svg>
   <input name="s" type="search" placeholder="{{ placeholderForSearch }}" aria-label="{{ ariaLabelForSearch }}">
+  <svg role="button" type="submit" tabindex="0"><use xlink:href="#search" /></svg>
 </div>
