--- a/src/_includes/components/header-nav.njk
+++ b/src/_includes/components/header-nav.njk
@@ -1,31 +1,31 @@
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-  <symbol id="menu-icon" viewBox="0 0 1536 1536">
-    {% include 'svg/menu.svg' %}
-  </symbol>
-  <symbol id="search" viewBox="0 0 21 22">
-    {% include 'svg/search.svg' %}
-  </symbol>
-</svg>
+<div class="nav-container">
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="menu-icon" viewBox="0 0 42 27">
+      {% include 'svg/menu.svg' %}
+    </symbol>
+    <symbol id="menu-close" viewBox="0 0 34 35">
+      {% include 'svg/close.svg' %}
+    </symbol>
+    <symbol id="search" viewBox="0 0 21 22">
+      {% include 'svg/search.svg' %}
+    </symbol>
+  </svg>
 
-{% set placeholderForSearch = "Search..." %}
-{% set ariaLabelForSearch = "Enter keywords for a site-wide search" %}
-
-<div class="nav-wideScreen">
-  {% include 'components/nav-menu.njk' %}
-  <form method="get" action="/search/">
+  {% set placeholderForSearch = "Search..." %}
+  {% set ariaLabelForSearch = "Enter keywords for a site-wide search" %}
+  <div class="nav-mobile-layout-wrapped">
+    {% include 'components/brand.njk' %}
+    <a class="header-recount" href="/recount">Join the conversation</a>
+  </div>
+  <div class="nav-mobile-layout-wrapped">
+    <div class="starter-nav">
+      <button id="menuToggleButton" aria-expanded="false" aria-describedby="navigation-menu">
+        <svg class="menu-open" aria-hidden="true"><use xlink:href="#menu-icon" /></svg>
+        <svg class="menu-close" aria-hidden="true"><use xlink:href="#menu-close" /></svg>
+      </button>
+      <div id="navigation-menu">MENU</div>
+    </div>
     {% include 'components/search-container.njk' %}
-  </form>
+  </div>
 </div>
-
-<div class="nav-smallScreen">
-  <nav class="starter-nav">
-    <button id="menuToggleButton" aria-expanded="false">
-      <svg><use xlink:href="#menu-icon" /></svg>&nbsp;<span>Menu</span><span class="screen-reader-only">Menu</span>
-    </button>
-    <form method="get" action="/search/">
-      {% include 'components/search-container.njk' %}
-    </form>
-  </nav>
-
-  {% include 'components/nav-menu.njk' %}
-</div>
+{% include 'components/nav-menu.njk' %}
