--- a/src/_includes/components/nav-menu.njk
+++ b/src/_includes/components/nav-menu.njk
@@ -1,8 +1,15 @@
-<nav class="primary-nav" aria-label="Primary Navigation">
-  {% set navItems = collections.pages | eleventyNavigation %}
-  {%- for item in navItems %}
-    {%- if (item.order > 0) %}
-    <a {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}" {% if item.locale and item.locale !== "en-CA" %}hreflang="{{ item.locale }}" lang="{{ item.locale }}"{% endif %}>{{ item.key }}</a>
-    {%- endif %}
-  {%- endfor %}
-</nav>
+<div class="primary-nav">
+  <nav aria-label="Primary Navigation">
+    {% set navItems = collections.pages | eleventyNavigation %}
+    {%- for item in navItems %}
+      {%- if (item.order > 0) %}
+      <a {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}" {% if item.locale and item.locale !== "en-CA" %}hreflang="{{ item.locale }}" lang="{{ item.locale }}"{% endif %}>{{ item.key }}</a>
+      {%- endif %}
+    {%- endfor %}
+  </nav>
+  <div>
+    <form method="get" action="/search/">
+      {% include 'components/search-container.njk' %}
+    </form>
+  </div>
+</div>
