--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: rem(38);
-	padding-block: 0 rem(50);
+	padding-block: rem(58);
 	padding-inline: rem(32);
 
 	.card {
@@ -58,6 +58,7 @@
 		}
 
 		p {
+			font-size: rem(24);
 			font-weight: 400;
 			line-height: 1.3;
 		}
@@ -206,12 +207,30 @@
 	.homepage-cards {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+
+		.card:first-child,
+		.card:nth-child(3) {
+			justify-self: flex-end;
+		}
+
+		.card:nth-child(2),
+		.card:last-child {
+			justify-self: flex-start;
+		}
 	}
 }
 
-@include breakpoint-up(lg) {
+@media only screen and (min-width: 1297px) {
 	.homepage-cards {
 		grid-template-columns: repeat(4, 1fr);
+		justify-content: center;
+
+		.card:first-child,
+		.card:nth-child(2),
+		.card:nth-child(3),
+		.card:last-child {
+			justify-self: initial;
+		}
 	}
 }
 
