--- a/src/assets/styles/components/_search-container.scss
+++ b/src/assets/styles/components/_search-container.scss
@@ -1,16 +1,12 @@
 // Styles for the search container
 .search-container {
-	align-items: center;
-	display: flex;
+	position: relative;
 
 	svg {
 		block-size: rem(24);
 		fill: $white;
 		inline-size: rem(24);
-		margin: rem(-29);
-
-		// make sure search svg is displayed on top of the search input box
-		z-index: 1;
+		position: absolute;
 	}
 
 	input[type="search"] {
@@ -21,28 +17,5 @@
 		outline: none;
 		padding-block: rem(8);
 		padding-inline: rem(16);
-
-		&:focus {
-			border-radius: rem(28);
-			inline-size: rem(160);
-			padding-inline-start: rem(32);
-		}
-	}
-}
-
-@include breakpoint-up(lg) {
-	.search-container {
-		svg {
-			margin: rem(-40);
-		}
-
-		input[type="search"],
-		input[type="search"]:focus {
-			border-radius: rem(28);
-			font-size: rem(18);
-			inline-size: rem(240);
-			padding-block: rem(16);
-			padding-inline: rem(56);
-		}
 	}
 }
